add: endpoint para listar instancias segun el cursoID
