# back/src/routes/instanciaEvaluativa.routes.js
@@ -7,4 +7,6 @@ const router = Router()
 
 router.post('/', validate(instanciaEvaluativa.instanciaBase), checkRole.checkRoleDocente, InstanciaEvaluativa.crear)
 router.get('/tiposInstancias',InstanciaEvaluativa.listarTiposInstancias)
+router.get('/:cursoID',InstanciaEvaluativa.listar)
+
 module.exports = router
